--- a/minor_proj.ipynb
+++ b/minor_proj.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "fdedf7c0-760a-4aea-a81f-b0b7b51ee82f",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "615895c1-4fe0-440c-8b62-4a47200853d6",
    "metadata": {},
    "outputs": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "e1f1d7fc-b9f2-44a3-a7e0-fcde2a629ab6",
    "metadata": {},
    "outputs": [
@@ -185,6 +185,16 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "126877a7-5480-42b4-b84a-ac7dacca4bb2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hello"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b2b93e7",
    "metadata": {},
    "outputs": [],
    "source": []
